resources/media-store/radarr/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
spec:
  ports:
    - name: web
      port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
  type: ClusterIP
