resources/media-store/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
spec:
  rules:
    - host: radarr.vvv.run
      http:
        paths:
          - path: /
            backend:
              serviceName: radarr
              servicePort: 7878
